--- a/cultraview/NewSettings/app/src/main/res/layout/page_wifi_hotspot_new.xml
+++ b/cultraview/NewSettings/app/src/main/res/layout/page_wifi_hotspot_new.xml
@@ -42,8 +42,8 @@
             android:layout_gravity="right|center_vertical"
             android:layout_marginStart="@dimen/dp_50"
             android:gravity="center"
-            android:textColor="@drawable/item_text_color"
             android:textSize="@dimen/content_sp"
+            android:textColor="@color/white"
             android:text="@string/hot_spot_type_one"/>
     </FrameLayout>
 
@@ -77,6 +77,7 @@
         android:layout_height="@dimen/common_item_height"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/margin_top"
+        android:visibility="gone"
         android:focusable="false">
 
         <TextView
@@ -106,10 +107,12 @@
         android:orientation="vertical">
 
         <FrameLayout
+            android:id="@+id/hotspot_ssid_fl"
             android:layout_width="@dimen/ll_main_content_width_size"
             android:layout_height="@dimen/common_item_height"
+            android:focusable="false"
             android:layout_gravity="right|center_vertical"
-            android:background="@drawable/selector_item">
+            >
 
             <TextView
                 android:id="@+id/hotspot_ssid_tv"
@@ -136,7 +139,8 @@
                 android:paddingLeft="@dimen/dip_20"
                 android:paddingRight="@dimen/dip_20"
                 android:singleLine="true"
-                android:textColor="@drawable/item_text_color"
+                android:focusable="true"
+                android:textColor="@color/white"
                 android:textColorHighlight="@color/edit_select"
                 android:textSize="@dimen/content_sp" />
         </FrameLayout>
@@ -147,6 +151,7 @@
             android:layout_height="@dimen/common_item_height"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/margin_top"
+            android:focusable="false"
             android:background="@drawable/selector_item">
 
             <TextView
@@ -175,7 +180,7 @@
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginStart="@dimen/dp_50"
                 android:gravity="center"
-                android:textColor="@drawable/item_text_color"
+                android:textColor="@color/white"
                 android:textSize="@dimen/content_sp" />
         </FrameLayout>
 
@@ -185,7 +190,8 @@
             android:layout_height="@dimen/common_item_height"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/margin_top"
-            android:background="@drawable/selector_item">
+            android:focusable="false"
+            >
 
             <TextView
                 android:id="@+id/hotspot_pwd_tv"
@@ -210,7 +216,8 @@
                 android:paddingLeft="@dimen/dp_20"
                 android:paddingRight="@dimen/dp_20"
                 android:singleLine="true"
-                android:textColor="@drawable/item_text_color"
+                android:focusable="true"
+                android:textColor="@color/white"
                 android:textColorHighlight="@color/edit_select"
                 android:textSize="@dimen/content_sp" />
         </FrameLayout>
@@ -232,7 +239,7 @@
                 android:layout_marginStart="@dimen/fab_network_margin"
                 android:gravity="left|center_vertical"
                 android:text="@string/show_password"
-                android:textColor="@drawable/item_text_color"
+                android:textColor="@color/white"
                 android:textSize="@dimen/content_sp" />
 
             <ImageView
@@ -259,7 +266,7 @@
             android:gravity="center"
             android:text="@string/save"
             android:textAllCaps="false"
-            android:textColor="@drawable/item_text_color"
+            android:textColor="@color/white"
             android:textSize="@dimen/content_sp" />
     </FrameLayout>
 
