--- a/cultraview/NewSettings/app/src/main/res/layout/activity_bootup.xml
+++ b/cultraview/NewSettings/app/src/main/res/layout/activity_bootup.xml
@@ -1,166 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="0dp"
-        android:orientation="vertical"
-        android:padding="0dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="0dp"
+    android:orientation="vertical"
+    android:padding="0dp">
 
     <include layout="@layout/top_back_layout" />
 
     <LinearLayout
-            android:layout_width="@dimen/ll_main_content_width_size"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/ll_main_margin_top"
-            android:orientation="vertical">
+        android:layout_width="@dimen/ll_main_content_width_size"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/ll_main_margin_top"
+        android:orientation="vertical">
 
         <RelativeLayout
-                android:id="@+id/rl_auto_bootup"
-                android:layout_height="@dimen/item_height"
-                style="@style/rl_item">
+            android:id="@+id/rl_auto_bootup"
+            style="@style/rl_item"
+            android:layout_height="@dimen/item_height">
 
             <TextView
-                    style="@style/item_textView"
-                    android:text="@string/item_on"
-                    android:textColor="@color/item_text_color"
-                    android:textSize="@dimen/content_sp"/>
+                style="@style/item_textView"
+                android:text="@string/item_on"
+                android:textColor="@color/item_text_color"
+                android:textSize="@dimen/content_sp" />
 
             <ImageView
-                    android:id="@+id/iv_auto_bootup"
-                    style="@style/switch_image_style"
-                    android:visibility="visible" />
+                android:id="@+id/iv_auto_bootup"
+                style="@style/switch_image_style"
+                android:visibility="visible" />
         </RelativeLayout>
+
         <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/list_divider"/>
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/list_divider" />
 
         <RelativeLayout
-                android:id="@+id/rl_auto_bootup_time"
-                android:layout_height="@dimen/item_height"
-                style="@style/rl_item">
+            android:id="@+id/rl_auto_bootup_time"
+            style="@style/rl_item"
+            android:layout_height="@dimen/item_height">
 
             <TextView
-                    style="@style/item_textView"
-                    android:text="@string/item_bootup_time"
-                    android:textColor="@color/item_text_color"
-                    android:textSize="@dimen/content_sp"/>
+                style="@style/item_textView"
+                android:text="@string/item_bootup_time"
+                android:textColor="@color/item_text_color"
+                android:textSize="@dimen/content_sp" />
 
             <TextView
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:id="@+id/tv_auto_bootup_time"
-                    android:text="@string/bootup_time"
-                    android:layout_marginEnd="20dp"
-                    android:textColor="@color/item_text_color"
-                    android:textSize="@dimen/content_sp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"
-                    />
+                android:id="@+id/tv_auto_bootup_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="20dp"
+                android:text="@string/bootup_time"
+                android:textColor="@color/item_text_color"
+                android:textSize="@dimen/content_sp" />
         </RelativeLayout>
+
         <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/list_divider"/>
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:background="@drawable/transparency_bg"
-                android:visibility="gone">
-
-            <TextView
-                    style="@style/item_textView"
-                    android:text="@string/item_bootup_time" />
-
-            <TimePicker
-                    android:id="@+id/timepicker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginEnd="10dp"
-                    android:theme="@style/Theme.picker"
-                    android:timePickerMode="spinner" />
-        </RelativeLayout>
-
-        <RelativeLayout
-                android:id="@+id/rl_repeat"
-                style="@style/rl_item"
-                android:layout_height="@dimen/item_height"
-                >
-
-            <TextView
-                    style="@style/item_textView"
-                    android:text="@string/item_repeat"
-                    android:textColor="@color/item_text_color"
-                    android:textSize="@dimen/content_sp"/>
-
-            <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginEnd="10dp"
-                    android:orientation="horizontal">
-
-                <ImageView
-                        android:id="@+id/iv_left"
-                        android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginRight="15dp"
-                        android:background="@drawable/item_left_bg" />
-
-                <TextView
-                        android:id="@+id/tv_repeat"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="@string/tv_repeat"
-                        android:textColor="#ffffff" />
-
-                <ImageView
-                        android:id="@+id/iv_right"
-                        android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="15dp"
-                        android:background="@drawable/item_rigth_bg" />
-            </LinearLayout>
-        </RelativeLayout>
-        <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/list_divider"/>
-        <RelativeLayout
-                android:id="@+id/rl_save"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:visibility="gone"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/selector_item"
-                android:focusable="true">
-
-            <Button
-                    android:id="@+id/btn_save"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"
-                    android:layout_marginEnd="10dp"
-                    android:textAllCaps="false"
-                    android:background="@drawable/button_bg_shape"
-                    android:text="@string/tv_save" />
-        </RelativeLayout>
-        <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/list_divider"/>
-
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/list_divider" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/ll_plan_item"
+        android:layout_width="@dimen/ll_main_content_width_size"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_title"
+            style="@style/item_textView"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/item_height"
+            android:gravity="center_vertical" />
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/list_divider" />
+    </LinearLayout>
 
 </LinearLayout>
