--- a/cultraview/NewSettings/app/src/main/res/layout/activity_shutdown.xml
+++ b/cultraview/NewSettings/app/src/main/res/layout/activity_shutdown.xml
@@ -66,100 +66,26 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@drawable/list_divider" />
+    </LinearLayout>
 
-        <RelativeLayout
+    <LinearLayout
+        android:id="@+id/ll_plan_item"
+        android:layout_width="@dimen/ll_main_content_width_size"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_title"
+            style="@style/item_textView"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@drawable/transparency_bg"
-            android:visibility="gone">
+            android:layout_height="@dimen/item_height"
+            android:gravity="center_vertical" />
 
-            <TextView
-                style="@style/item_textView"
-                android:text="@string/item_shutdown_time" />
-
-            <TimePicker
-                android:id="@+id/timepicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="10dp"
-                android:theme="@style/Theme.picker"
-                android:timePickerMode="spinner" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/rl_repeat"
-            style="@style/rl_item"
-            android:layout_height="@dimen/item_height">
-
-            <TextView
-                style="@style/item_textView"
-                android:text="@string/item_repeat"
-                android:textColor="@color/item_text_color"
-                android:textSize="@dimen/content_sp" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="10dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/iv_left"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginRight="15dp"
-                    android:background="@drawable/item_left_bg" />
-
-                <TextView
-                    android:id="@+id/tv_repeat"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="@string/tv_repeat"
-                    android:textColor="#ffffff" />
-
-                <ImageView
-                    android:id="@+id/iv_right"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="15dp"
-                    android:background="@drawable/item_rigth_bg" />
-            </LinearLayout>
-        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@drawable/list_divider" />
-
-        <RelativeLayout
-            android:id="@+id/rl_save"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/selector_item"
-            android:focusable="true"
-            android:visibility="gone">
-
-            <Button
-                android:id="@+id/btn_save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/button_bg_shape"
-                android:text="@string/tv_save"
-                android:textAllCaps="false" />
-        </RelativeLayout>
-
     </LinearLayout>
-
-
 </LinearLayout>
