--- a/cultraview/NewSettings/app/src/main/res/layout/dialog_bootup_layout.xml
+++ b/cultraview/NewSettings/app/src/main/res/layout/dialog_bootup_layout.xml
@@ -1,69 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="360dp"
-        android:layout_height="320dp"
-        android:background="@drawable/button_bg_shape"
-        android:orientation="vertical">
+    android:layout_width="360dp"
+    android:layout_height="350dp"
+    android:background="@drawable/button_bg_shape"
+    android:orientation="vertical">
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/item_bootup_time"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="@string/item_bootup_time"
+        android:textColor="@color/black"
+        android:textSize="20dp" />
 
     <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/result_save"
-                android:textSize="18dp"
-                android:textColor="@color/black"
-                android:visibility="gone" />
-        <TimePicker
-                android:id="@+id/timepicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:timePickerMode="spinner"
-                android:theme="@style/Theme.picker"
-                android:layout_centerInParent="true"/>
-    </RelativeLayout>
-
-    <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:layout_centerInParent="true"
+            android:text="@string/result_save"
+            android:textColor="@color/black"
+            android:textSize="18dp"
+            android:visibility="gone" />
+
+        <TimePicker
+            android:id="@+id/timepicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:theme="@style/Theme.picker"
+            android:timePickerMode="spinner" />
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_repeat"
+            android:textColor="@color/color_666666"
+            android:textSize="12sp" />
+
+        <CheckBox
+            android:id="@+id/cb_off_sunday"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/checkbox_bg_boot_add_plan"
+            android:button="@null"
+            android:gravity="center"
+            android:text="@string/text_sunday_short"
+            android:textColor="@color/checkable_text"
+            android:textSize="10sp" />
+
+        <CheckBox
+            android:id="@+id/cb_off_monday"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/checkbox_bg_boot_add_plan"
+            android:button="@null"
+            android:checked="true"
+            android:gravity="center"
+            android:text="@string/text_monday_short"
+            android:textColor="@color/checkable_text"
+            android:textSize="10sp" />
+
+        <CheckBox
+            android:id="@+id/cb_off_tuesday"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/checkbox_bg_boot_add_plan"
+            android:button="@null"
+            android:checked="true"
+            android:gravity="center"
+            android:text="@string/text_tuesday_short"
+            android:textColor="@color/checkable_text"
+            android:textSize="10sp" />
+
+        <CheckBox
+            android:id="@+id/cb_off_wednesday"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/checkbox_bg_boot_add_plan"
+            android:button="@null"
+            android:checked="true"
+            android:gravity="center"
+            android:text="@string/text_wednesday_short"
+            android:textColor="@color/checkable_text"
+            android:textSize="10sp" />
+
+        <CheckBox
+            android:id="@+id/cb_off_thursday"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/checkbox_bg_boot_add_plan"
+            android:button="@null"
+            android:checked="true"
+            android:gravity="center"
+            android:text="@string/text_thursday_short"
+            android:textColor="@color/checkable_text"
+            android:textSize="10sp" />
+
+        <CheckBox
+            android:id="@+id/cb_off_friday"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/checkbox_bg_boot_add_plan"
+            android:button="@null"
+            android:checked="true"
+            android:gravity="center"
+            android:text="@string/text_friday_short"
+            android:textColor="@color/checkable_text"
+            android:textSize="10sp" />
+
+        <CheckBox
+            android:id="@+id/cb_off_saturday"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/checkbox_bg_boot_add_plan"
+            android:button="@null"
+            android:gravity="center"
+            android:text="@string/text_saturday_short"
+            android:textColor="@color/checkable_text"
+            android:textSize="10sp" />
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_height="wrap_content">
 
         <Button
-                android:id="@+id/btn_cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="10dp"
-                android:textAllCaps="false"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/selector_btn_bg"
-                android:textColor="@drawable/item_text_color_dialog"
-                android:text="@string/result_cancel" />
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/selector_btn_bg"
+            android:text="@string/result_cancel"
+            android:textAllCaps="false"
+            android:textColor="@drawable/item_text_color_dialog" />
 
         <Button
-                android:id="@+id/btn_ok"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerInParent="true"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"
-                android:textAllCaps="false"
-                android:background="@drawable/selector_btn_bg"
-                android:textColor="@drawable/item_text_color_dialog"
-                android:text="@string/result_ok" />
+            android:id="@+id/btn_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/selector_btn_bg"
+            android:text="@string/result_ok"
+            android:textAllCaps="false"
+            android:textColor="@drawable/item_text_color_dialog" />
     </RelativeLayout>
 
 </LinearLayout>
