--- a/cultraview/easytouch/app/src/main/res/layout/btn_menu.xml
+++ b/cultraview/easytouch/app/src/main/res/layout/btn_menu.xml
@@ -6,7 +6,7 @@
     android:layout_margin="0dp"
     android:orientation="vertical">
 
-    <!--    ÉèÖÃ-->
+    <!--    è®¾ç½®-->
     <ImageView
         android:id="@+id/btn_setting"
         android:layout_width="@dimen/dp_20"
@@ -38,15 +38,24 @@
         android:layout_marginStart="1dp"
         android:src="@drawable/btn_user_defined_normal" />
 
+    <ImageView
+        android:id="@+id/btn_user_hide_tips"
+        android:layout_width="5dp"
+        android:layout_height="5dp"
+        android:layout_alignTop="@+id/btn_switch"
+        android:layout_marginLeft="-5dp"
+        android:layout_toRightOf="@+id/btn_usered"
+        android:src="@mipmap/btn_delete"
+        android:visibility="gone" />
 
     <TextView
+        android:id="@+id/id_tv_favorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_usered"
         android:layout_alignParentStart="true"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
-
         android:text="@string/favorites"
         android:textColor="@color/white"
         android:textSize="9sp" />
@@ -63,6 +72,7 @@
         android:src="@drawable/btn_app_switch_normal" />
 
     <TextView
+        android:id="@+id/id_tv_app_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_switch"
@@ -82,6 +92,7 @@
         android:src="@drawable/btn_back_normal" />
 
     <TextView
+        android:id="@+id/id_tv_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_back"
@@ -101,6 +112,7 @@
         android:src="@drawable/btn_pan_normal" />
 
     <TextView
+        android:id="@+id/id_tv_annotation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_pan"
@@ -111,23 +123,23 @@
         android:textSize="9sp" />
 
 
-    <!--    Ö÷Ò³-->
+    <!--    ä¸»é¡µ-->
     <ImageView
         android:id="@+id/btn_home"
         android:layout_width="@dimen/dp_20"
         android:layout_height="@dimen/dp_20"
-        android:layout_above="@+id/txt_home"
+        android:layout_above="@+id/id_tv_home"
         android:layout_centerHorizontal="true"
         android:src="@drawable/btn_home_normal" />
 
     <TextView
-        android:id="@+id/txt_home"
+        android:id="@+id/id_tv_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="@string/home"
         android:layout_marginTop="1dp"
+        android:text="@string/home"
         android:textColor="@color/white"
         android:textSize="9sp" />
 
